# snippet-vault

./: .env.example  .gitignore  .prettierrc  next.config.mjs  package-lock.json  package.json
prisma/: .gitignore  Cargo.toml  schema.prisma
prisma/.cargo/: config.toml
prisma/src/: lib.rs
scripts/: seed.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  error.rs  main.rs  prelude.rs  state.rs
src-tauri/src/commands/: user.rs
src-tauri/src/database/: mod.rs  models.rs
src-tauri/src/ipc/: mod.rs  params.rs  responses.rs
src-tauri/src/ipc/commands/: auth.rs  mod.rs  snippet.rs  snippet_state.rs  tag.rs  user.rs
src/app/: globals.css  greet.tsx  layout.tsx  page.tsx
src/app/(pages)/: layout.tsx
src/app/(pages)/(Home)/: layout.tsx  page.tsx
src/app/(pages)/(auth)/: layout.tsx
src/app/(pages)/(main)/: Sidebar.tsx  layout.tsx
src/components/Common/: ComboboxMultiSelect.tsx  CustomContextMenu.tsx  EnhancedButton.tsx  EnhancedLink.tsx  ModeToggle.tsx  ThemeSwitch.tsx  Tooltip.tsx
src/components/Layout/: Header.tsx
src/components/Layout/Footer/: ConnectWithUs.tsx  QuickLinks.tsx  (+3 more)
src/components/ui/: box-reveal.tsx  date-input.tsx  date-range-picker.tsx  dual-range-slider.tsx  form.tsx  sortable.tsx  sparkles-text.tsx
src/contexts/: AuthContext.tsx  SnippetContext.tsx  TagsContext.tsx
src/contexts/SnippetContext/: SnippetsProvider.tsx  index.tsx  snippetsReducer.ts  types.ts
src/hooks/: useAuth.ts  useCurrentTheme.ts  useEventListener.ts  useHotkeys.ts  useIntersection.ts  useLanguageStore.ts  useLinkStore.ts  useMonacoThemeManager.ts  useQueryParams.ts  useSnippetStore.ts  useSnippets.ts  useSnippetsContext.ts  useSnippetsFilter.ts  useTags.ts  useTagsContext.ts  useTagsStore.ts
src/initialData/: notes.ts  tags.ts
src/lib/schemas/: auth.ts  common.ts  snippet.ts  tag.ts  user.ts
src/lib/tauri/: commands.ts  invoke.ts  types.ts
src/lib/utils/: compose-refs.ts  emojiHelper.ts  filters.ts  humanReadableTimestamp.ts  index.ts  stringUtils.ts
src/providers/: ReactQueryProvider.tsx  index.tsx
(+62 files in other folders)
