[package]
name = "prisma"
authors = ["Dr.Sabry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prisma-cli"
path = "src/prisma-cli.rs"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "mongodb",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "mongodb",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
