[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
async-trait = "0.1.81"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
prisma = { path = "../prisma" }
rodio = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.7.0", features = [
    "shell-all",
    "notification-all",
    "icon-png",
    "shell-open-api",
    "system-tray",
    "notification",
    "windows7-compat",
] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
